Fix login form fields spacing

--- a/WMS.Frontend/src/app/auth/login/login.component.scss
+++ b/WMS.Frontend/src/app/auth/login/login.component.scss
@@ -112,6 +112,8 @@
 }
 
 .form-spacing {
+  display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 
